Change images and update text

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h3>We are getting married!</h3>
-                    <p>The wedding is on Friday 7<sup>th</sup> August 2020, in the Larchfield Estate in Lisburn, Ireland
+                    <p>The wedding is on Friday 7<sup>th</sup> August 2020, in the Larchfield Estate in Lisburn
                         and we'd love you to join us for it</p>
                 </div>
             </div>
@@ -106,10 +106,10 @@
                     <div class="wp3">
                         <p><strong>7th August</strong></p>
 
-                        <h5>Larchfield <span class="time">1PM - 5PM</span></h5>
+                        <h5>Larchfield <span class="time">1PM - 8PM</span></h5>
                         <p>Both the ceremony and the wedding party are taking place at the Larchfield Estate outside
                             Lisburn. It's a lovely old farmyard with cobbled courtyards, a beautiful 19<sup>th</sup>
-                            barn for the dinner and dancingand walled gardens for walks and photos.</p>
+                            barn for the dinner and walled gardens for walks and photos.</p>
                     </div>
 
                 </div>
@@ -201,7 +201,7 @@
 
     <section id="map" class="section-padding">
         <div class="text-center">
-            <h3>Getting there and where to stay!</h3>
+            <h3>Getting there!</h3>
             <p></p>
         </div>
 
@@ -229,11 +229,6 @@
                                 <h5>Larchfield Estate</h5>
                                 <p>Bailliesmills Rd, Lisburn BT27 6XJ</p>
                             </div>
-                            <div class="col-md-6">
-                                <h5>Need some advice?</h5>
-                                <p>If you've never been to Ireland before or have some questions then just email or
-                                    WhatsApp us</p>
-                            </div>
                         </div>
                         <div class="row text-center">
                             <div class="col-md-6" style="padding: 5px;">
@@ -247,31 +242,6 @@
             </div>
         </div>
 
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 col-sm-12 col-xs-12 leftcol">
-                    <div class="wp3">
-                        <h5>Coming from abroad?</span></h5>
-                        <p>If you're flying into Ireland for the wedding, then the best airport to fly into is Belfast
-                            International. It may be falling apart, but it's well connected with Cambridge and is very
-                            close to Belfast! EasyJet have direct flights from Stansted for around £100 return. If you
-                            don't like airports then there are ferry routes with the car from Liverpool and Stranraer.
-                        </p>
-                    </div>
-
-                </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 rightcol">
-                    <div class="wp5">
-                        <h5>Staying in the area</span></h5>
-                        <p>Unfortunately, there's limited space at the Larchfield to stay, but it's very conveniently
-                            located to both Lisburn and Belfast with each just a short taxi journey away. Lisburn is a
-                            slightly shorter journey, but Belfast gives you a lot more options for hotels catering for
-                            every budget. </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </section>
 
     <section class="rsvp text-center" id="rsvp">
@@ -280,11 +250,10 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
                     <h3>Can you join us?</h3>
-                    <p>We would greatly appreciate if you could RSVP before 1<sup>st</sup> July 2020.</p>
+                    <p>We would greatly appreciate if you could RSVP before 1<sup>st</sup> August 2020.</p>
 
                     <p>You can RSVP in whatever way suits you. either drop us an email at <a
-                            href="mailto:us@kevinandciara.com">us@kevinandciara.com</a> or send an RSVP our home address
-                        which was on your invite :)</p>
+                            href="mailto:us@kevinandciara.com">us@kevinandciara.com</a></p>
                 </div>
             </div>
         </div>
