Add the word century

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
                         <h5>Larchfield <span class="time">1PM - 8PM</span></h5>
                         <p>Both the ceremony and the wedding party are taking place at the Larchfield Estate outside
-                            Lisburn. It's a lovely old farmyard with cobbled courtyards, a beautiful 19<sup>th</sup>
+                            Lisburn. It's a lovely old farmyard with cobbled courtyards, a beautiful 19<sup>th</sup> century
                             barn for the dinner and walled gardens for walks and photos.</p>
                     </div>
 
